--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,7 +10,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "codemirror": "5.55.0",
     "react": "^16.13.1",
+    "react-codemirror2": "7.2.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
@@ -35,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/codemirror": "0.0.97"
   }
 }
