--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "codemirror": "5.55.0",
+    "lodash": "4.17.19",
     "react": "^16.13.1",
     "react-codemirror2": "7.2.1",
     "react-dom": "^16.13.1",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@types/codemirror": "0.0.97"
+    "@types/codemirror": "0.0.97",
+    "@types/lodash": "4.14.157"
   }
 }
