--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "codemirror": "5.55.0",
     "lodash": "4.17.19",
+    "normalize.css": "8.0.1",
     "react": "^16.13.1",
     "react-codemirror2": "7.2.1",
     "react-dom": "^16.13.1",
